add / a-d キーでフォーカスを切り替えられるよう実装

--- a/ImageChecker/Views/MainWindow.xaml
+++ b/ImageChecker/Views/MainWindow.xaml
@@ -27,6 +27,26 @@
             Command="{Binding GenerateDrawTagCommand}"
             Modifiers="Control" />
 
+        <KeyBinding
+            Key="A"
+            Command="{Binding FocusToListBoxCommand}"
+            CommandParameter="{Binding ElementName=ImageListBoxA}" />
+
+        <KeyBinding
+            Key="B"
+            Command="{Binding FocusToListBoxCommand}"
+            CommandParameter="{Binding ElementName=ImageListBoxB}" />
+
+        <KeyBinding
+            Key="C"
+            Command="{Binding FocusToListBoxCommand}"
+            CommandParameter="{Binding ElementName=ImageListBoxC}" />
+
+        <KeyBinding
+            Key="D"
+            Command="{Binding FocusToListBoxCommand}"
+            CommandParameter="{Binding ElementName=ImageListBoxD}" />
+
     </Window.InputBindings>
 
     <Window.Resources>
