add / Canvas コントロールの背景色を設定

--- a/ImageChecker/Views/MainWindow.xaml
+++ b/ImageChecker/Views/MainWindow.xaml
@@ -111,7 +111,10 @@
                 <RowDefinition Height="70" />
             </Grid.RowDefinitions>
 
-            <Canvas Grid.Row="0" ClipToBounds="True">
+            <Canvas
+                Grid.Row="0"
+                Background="Gray"
+                ClipToBounds="True">
                 <Canvas.Resources>
                     <Style TargetType="Image">
                         <Setter Property="HorizontalAlignment" Value="Left" />
