add / draw, image タグをテキストボックスのテキストから生成する機能を実装

--- a/ImageChecker/Views/MainWindow.xaml
+++ b/ImageChecker/Views/MainWindow.xaml
@@ -321,7 +321,7 @@
                         HorizontalAlignment="Left"
                         Text="draw tag  : " />
 
-                    <TextBox Margin="5,2" />
+                    <TextBox Margin="5,2" Text="{Binding DrawTagReplaceBaseText, UpdateSourceTrigger=PropertyChanged}" />
 
                 </DockPanel>
 
