ui / 右に表示される画像一覧の仕様を変更
従来は画面を広げた場合、画像が左寄せでの表示になっていた。
これを中央揃えで画像が表示されるよう変更

--- a/ImageChecker/Views/MainWindow.xaml
+++ b/ImageChecker/Views/MainWindow.xaml
@@ -59,6 +59,7 @@
 
         <Style TargetType="ListBox">
             <Setter Property="Background" Value="{Binding RelativeSource={RelativeSource AncestorType=Window}, Path=Background}" />
+            <Setter Property="HorizontalContentAlignment" Value="Center" />
             <Setter Property="ItemTemplate">
                 <Setter.Value>
                     <DataTemplate>
