--- a/ImageChecker/Views/MainWindow.xaml
+++ b/ImageChecker/Views/MainWindow.xaml
@@ -2,15 +2,20 @@
     x:Class="ImageChecker.Views.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:model="clr-namespace:ImageChecker.Models"
     xmlns:prism="http://prismlibrary.com/"
+    xmlns:viewModels="clr-namespace:ImageChecker.ViewModels"
     Title="{Binding ImageLoader.CurrentDirectoryPath}"
     Width="1200"
     Height="700"
+    d:DataContext="{d:DesignInstance viewModels:MainWindowViewModel}"
     prism:ViewModelLocator.AutoWireViewModel="True"
     AllowDrop="True"
-    Background="#404040">
+    Background="#404040"
+    mc:Ignorable="d">
 
     <i:Interaction.Behaviors>
         <model:DragAndDropBehavior />
@@ -62,7 +67,7 @@
             <Setter Property="HorizontalContentAlignment" Value="Center" />
             <Setter Property="ItemTemplate">
                 <Setter.Value>
-                    <DataTemplate>
+                    <DataTemplate DataType="{x:Type model:ImageFile}">
                         <Border
                             Width="90"
                             MinWidth="110"
@@ -117,6 +122,7 @@
 
         <Menu
             Grid.Row="0"
+            Grid.Column="0"
             Grid.ColumnSpan="5"
             Background="Transparent">
             <MenuItem Foreground="WhiteSmoke" Header="File" />
@@ -137,7 +143,7 @@
             </MenuItem>
         </Menu>
 
-        <Grid Grid.Row="1">
+        <Grid Grid.Row="1" Grid.Column="0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="450" />
                 <RowDefinition Height="30" />
@@ -291,8 +297,8 @@
 
                 <DockPanel Margin="0,5">
 
-                    <TextBlock Grid.Column="0" Text="X = " />
-                    <TextBlock Grid.Column="1" Text="{Binding X}" />
+                    <TextBlock Text="X = " />
+                    <TextBlock Text="{Binding X}" />
 
                     <Slider
                         IsSnapToTickEnabled="true"
@@ -370,6 +376,7 @@
 
         <StatusBar
             Grid.Row="2"
+            Grid.Column="0"
             Grid.ColumnSpan="5"
             Height="25"
             Background="Transparent"
