add / 同グループ画像の表示機能を拡張
ベースイメージの選択変更に、同機能が追従するよう実装

--- a/ImageChecker/Views/MainWindow.xaml
+++ b/ImageChecker/Views/MainWindow.xaml
@@ -351,7 +351,14 @@
             Grid.Row="1"
             Grid.Column="1"
             ItemsSource="{Binding ImageContainerA.FilteredFiles}"
-            SelectedItem="{Binding ImageContainerA.CurrentFile}" />
+            SelectedItem="{Binding ImageContainerA.CurrentFile}">
+
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="SelectionChanged">
+                    <i:InvokeCommandAction Command="{Binding ChangeImageGroupCommand}" />
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
+        </ListBox>
 
         <ListBox
             Name="ImageListBoxB"
