add / クリップボードの履歴を表示する ListBox の ui を作成

--- a/ImageChecker/Views/MainWindow.xaml
+++ b/ImageChecker/Views/MainWindow.xaml
@@ -323,7 +323,16 @@
 
             </StackPanel>
 
-            <ListBox Grid.Row="3" />
+            <ListBox
+                Grid.Row="3"
+                HorizontalContentAlignment="Left"
+                ItemsSource="{Binding ClipboardHistories}">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Foreground="WhiteSmoke" Text="{Binding CopiedText}" />
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
 
         </Grid>
 
